openshift/App.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firstapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firstapp
  template:
    metadata:
      labels:
        app: firstapp
    spec:
      containers:
        - name: firstapp
          image: sachinbhuibar/firstapp
          ports:
            - containerPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secondapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secondapp
  template:
    metadata:
      labels:
        app: secondapp
    spec:
      containers:
        - name: secondapp
          image: sachinbhuibar/secondapp
          ports:
            - containerPort: 4000

---
apiVersion: v1
kind: Service
metadata:
  name: firstapp-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: firstapp
  ports:
    - port: 3000
      targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: secondapp-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: secondapp
  ports:
    - port: 4000
      targetPort: 4000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /firstapp
            pathType: Prefix
            backend:
              service:
                name: firstapp-cluster-ip-service
                port:
                  number: 3000
    - http:
        paths:
          - path: /secondapp
            pathType: Prefix
            backend:
              service:
                name: secondapp-cluster-ip-service
                port:
                  number: 4000
